<resources>
    <string name="app_name">Annuaire</string>
    <string name="favoris">Favorites</string>
    <string name="ajouter_nouveau_contact">Add new contact</string>
    <string name="save">Save</string>
    <string name="saisir_prenom_telephone">Please enter first name and phone number</string>
    <string name="save_contact_done">Successful registration</string>
    <string name="nom">Last name</string>
    <string name="prenom">First name</string>
    <string name="telephone">Phone</string>
    <string name="email">E-mail</string>
    <string name="adresse">Address</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="delete_success">Deletion completed successfully</string>
    <string name="cancel">To cancel</string>
    <string name="yes">Yes</string>
    <string name="confirm_delete">Are you sure you want to delete this contact</string>
    <string name="save_contact">Contact save</string>
    <string name="number_add">Phone number added to your phone book</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>