<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh_layout_mon_compte"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/couleur_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/custom_add_contact_toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/photoCover"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_person_24"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_marginRight="10dp"
                android:layout_marginTop="-20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@id/photo"
                    android:layout_marginLeft="20dp"
                    android:scaleType="centerCrop"
                    android:layout_width="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_camera"/>

            </RelativeLayout>



            <LinearLayout
                android:background="@color/couleur_background"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    android:background="@color/couleur_blanche">

                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_prenom_contact"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:hint="@string/prenom"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:drawableLeft="@drawable/ic_baseline_person_24"
                            android:fontFamily="@font/exo_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:layout_marginTop="15dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:id="@+id/et_nom_contact"
                            android:hint="@string/nom"
                            android:drawableLeft="@drawable/ic_baseline_person_24"
                            android:imeOptions="actionNext"
                            android:fontFamily="@font/exo_regular"
                            android:layout_width="match_parent"
                            android:inputType="text"
                            android:layout_height="wrap_content" />

                        <EditText
                        android:id="@+id/et_tel_contact"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/telephone"
                        android:imeOptions="actionNext"
                        android:maxLength="20"
                        android:drawableLeft="@drawable/ic_baseline_phone_24"
                        android:fontFamily="@font/exo_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        />

                        <EditText
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:id="@+id/et_email_contact"
                            android:layout_marginTop="15dp"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:fontFamily="@font/exo_regular"
                            android:drawableLeft="@drawable/ic_baseline_email_24"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            />

                        <EditText
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:id="@+id/et_adresse_contact"
                            android:layout_marginTop="15dp"
                            android:hint="@string/adresse"
                            android:imeOptions="actionNext"
                            android:fontFamily="@font/exo_regular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_baseline_location_city_24"
                            android:inputType="text"
                            android:layout_marginBottom="30dp"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
